# buf_read_splitter

./: .gitignore  Cargo.toml  README.md
src/: all_end_of_line_matcher.rs  buf_ext.rs  buf_ext_iter.rs  buf_read_splitter.rs  fifo.rs  from_v2.rs  lib.rs  match_result.rs  matcher.rs  options.rs  simple_matcher.rs
tests/: buf_read_splitter.rs
