[package]
name = "buf_read_splitter"
version = "0.3.0"
edition = "2021"
description = "Stream reader in buffer with capacity to split(stop) on a giving pattern (usually &[u8])"
repository = "https://github.com/flogbl/buf_read_splitter"
license = "MIT"
exclude = [".gitignore"]

[dependencies]
env_logger = { version = "0.7", optional = true }
log = { version = "0.4", optional = true }
format_hex = { version = "0.1", optional = true }

[features]
default = []
#default = ["log"]
log = ["dep:log", "dep:format_hex", "dep:env_logger"]
